--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RobotAndroid" />
+        android:theme="@style/Theme.RobotAndroid">
+        <activity android:name=".MainActivity"></activity>
+    </application>
 
 </manifest>
