--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'junit:junit:4.12'
     implementation 'junit:junit:4.12'
-    implementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.android.material:material: 1.2.1'
+    implementation "androidx.constraintlayout:constraintlayout:2.0.2"
+
 }
