Formulaire edition presque Ok sans BDD.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name=".MenuGamme"
             android:label="MenuGamme" />
+        <activity
+            android:name=".OperationRepository.EditOperation"
+            android:label="EditOperation" />
     </application>
 
 </manifest>
