--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.robotandroid">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -9,8 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RobotAndroid">
-        <activity android:name=".listeAppareilWifi"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".listeAppareilWifi">
+
+        </activity>
+        <activity android:name=".connexionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
