--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.robotandroid">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,9 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RobotAndroid">
-        <activity android:name=".listeAppareilWifi">
-
-        </activity>
+        <activity android:name=".CreerUserActivity"></activity>
+        <activity android:name=".listeAppareilWifi"></activity>
         <activity android:name=".connexionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
