--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        def appcompat_version = "1.2.0"
         classpath "com.android.tools.build:gradle:4.2.1"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,7 +15,10 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
+        mavenCentral(){
+            url "https://jitpack.io"
+        }
+        jcenter()
     }
 }
 
