--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RobotAndroid">
-        <activity android:name=".MenuTache" />
-        <activity android:name=".GammeRepository.CreateGamme" />
+        <activity android:name=".TacheRepository.EditTacheActivity" />
+        <activity android:name=".GammeRepository.EditGammeActivity" />
         <activity
             android:name=".MenuDemarrage"
             android:label="MenuDemarrage">
@@ -22,10 +22,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MenuGamme"
+            android:name=".ListGammeActivity"
             android:label="MenuGamme" />
         <activity
-            android:name=".OperationRepository.EditOperation"
+            android:name=".OperationRepository.EditOperationActivity"
             android:label="EditOperation" />
     </application>
 
