--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compile 'com.github.stealthcopter:AndroidNetworkTools:0.4.5.3'
+
+    //noinspection GradleCompatible
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.github.stealthcopter:AndroidNetworkTools:0.4.5.3'
 
