--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RobotAndroid">
-        <activity android:name=".CreerUserActivity"></activity>
-        <activity android:name=".listeAppareilWifi"></activity>
+        <activity android:name=".CreerUserActivity">
+
+        </activity>
+        <activity android:name=".listeAppareilWifi">
+
+        </activity>
         <activity android:name=".connexionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
