--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.github.stealthcopter:AndroidNetworkTools:0.4.5.3'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.github.stealthcopter:AndroidNetworkTools:0.4.5.3'
+    implementation 'com.google.code.gson:gson:2.8.7'
 
 
 
